wordpress/mysql.yaml
#svc-ClusterIP-mysql
apiVersion: v1
kind: Service
metadata:
  name: svc-cluserip-mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None

---
#Deployment-mysql
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql-cont
        ports:
        - containerPort: 3306
          name: mysql-cont
        volumeMounts:
        - name: mysql-stockage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-stockage
        persistentVolumeClaim:
          claimName: pvc-mysql
