wordpress/wordpress.yaml
#NodePort-wordpress
apiVersion: v1
kind: Service
metadata:
  name: srv-nodeport-wordpress
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
  -  port: 80
     targetPort: 80

---
#Deploy-wordpress
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-depl
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress-cont
        ports:
        - containerPort: 80
          name: wordpress-cont
        volumeMounts:
        - name: wordpress-stockage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-stockage
        persistentVolumeClaim:
          claimName: pvc-wordpress
