wordpress/ingress-wp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress-tls
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - test.wordpress.com
    secretName: tls-wp-secret
  rules:
  - host: test.wordpress.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: srv-nodeport-wordpress
            port:
              number: 80
